--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,114 @@
-.App {
+/*.App {
+  box-sizing: border-box;
+}*/
+
+.log-in, .sign-up{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: auto;
+}
+
+.log-in > p, .sign-up > p {
+  color: red;
+  text-align: center;
+}
+.log-in-fields, .sign-up-fields{
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2em;
+  padding-bottom: 20px; 
+}
+
+.log-in-fields > input, .sign-up-fields > input{
+  padding: 10px; 
+  margin-bottom: 15px;
+}
+
+.log-in-btns > input, .sign-up-btns > input{
+  padding: 10px;
+  background-color:#009688;
+  font-weight: bold;
+  color: white;
+  border-radius: 3px 3px 0 0;
+  box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+  width: 30%;
+  margin-right: 10px; 
+}
+
+.product-page{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.browse-products{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 75%;
+}
+.browse-product-body{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-card{
+  display: flex;
+  flex-direction: column;
+  max-width: 40%;
+  border: 1px solid black;
+  border-radius: 5%;
+  padding: 10px;
+  text-align: center;
+}
+
+.product-image{
+  width: 50%;
+  margin: auto;
+}
+
+.product-image > img {
+  width: 100%;
+}
+
+.product-card > button{
+  padding: 10px;
+  border-radius: 5%;
+  background-color: #FFA000;
+  color: white;
+}
+
+.product-card{
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.cart{
+}
+
+
+/*
+----------------------------------------
+MEDIA QUERIES
+-----------------------------------------
+*/
+
+@media (max-width: 767px){
+
+  .log-in, .sign-up{
+    max-width: 80%;
+  }
+
+
+}
+
+@media (min-width: 768px){
+  .log-in, .sign-up{
+    max-width: 50%;
+  }
+}
+
+
+/*.App {
   text-align: center;
 }
 
@@ -31,3 +141,4 @@
     transform: rotate(360deg);
   }
 }
+*/
