--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   color: red;
   text-align: center;
 }
+
 .log-in-fields, .sign-up-fields{
   display: flex;
   flex-direction: column;
@@ -35,9 +36,6 @@
   font-size: 1.1em;
 }
 
-.log-in-fields > input:focus{
-  
-}
 
 .log-in-btns > input, .sign-up-btns > input{
   padding: 10px;
@@ -73,7 +71,6 @@
 .browse-product-body{
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 .product-card{
@@ -88,13 +85,11 @@
   margin-bottom: 10px;
   padding-bottom: 10px;
   background-color: #E0F2F1;
-  /*background-color: #EEEEEE;*/
 }
 
-/*
-img[alt*="Bleminor"]{
-    transform: rotateZ(90deg);
-}*/
+button:focus{
+  outline: none;
+}
 
 .product-card > button{
   padding: 10px;
@@ -102,14 +97,11 @@ img[alt*="Bleminor"]{
   width: 40%;
   background-color: #009688;
   color: white;
-  margin-top: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto auto 0 auto;
   font-weight: bold;
 }
 
 .product-card > button:hover{
-  /*background-color: #FFA000;*/
   background-color: #F57C00;
 }
 
@@ -132,12 +124,14 @@ img[alt*="Bleminor"]{
 }
 
 .product-detail > h3{
+  padding: 20px 10px;
+  margin: 0;
+  text-align: left;
 }
 
 .product-detail > p{
-  /*margin-left: auto;
-  max-width: 50px;*/
-  margin-right: 10px;
+  margin: 0px auto 0px;
+  padding: 0 10px;
   font-weight: bold; 
 }
 
@@ -172,7 +166,6 @@ img[alt*="Bleminor"]{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  /*padding: 10px;*/
   margin-bottom: 15px;
   background-color: white;
 }
@@ -189,17 +182,11 @@ img[alt*="Bleminor"]{
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: 10px;
-  /*text-align: center;*/
 }
 
 .product-list-item > p{
-  /*max-width: 150px;*/
-  max-width: 60%;
-}
-
-.product-list-item > p + p {
-  margin-right: 20px;
+  padding: 10px 30px;
+  margin: 0;
 }
 
 .counter{
@@ -219,13 +206,11 @@ img[alt*="Bleminor"]{
   margin: auto;
   max-width: 60%;
   min-width: 300px;
-  /*background-color: #80CBC4;*/
   background-color: #EEEEEE;
   padding: 50px;
 }
 
 .order-summary-body{
-  /*padding: 50px;*/
 }
 
 .order-summary-body .cart-item{
@@ -249,7 +234,6 @@ img[alt*="Bleminor"]{
   margin-left: auto;
   max-width: 30%;
   font-size: 1.5em;
-  /*background-color: #e57373;*/
   background-color: #FF9800;
   font-weight: bold;
 }
@@ -278,11 +262,7 @@ MEDIA QUERIES
     min-width: 70%;
   }
 
-  /*.product-card + .product-card{
-    margin-right: 50px;
-  }*/
   .product-page{
-    /*justify-content: center;*/
   }
 
   .order-summary{
